appium + rest tests deldete and get